Kludging together a utility object to hold the wind gust particles for the moth boss.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -358,7 +358,11 @@
 					set(level.lock_screen, null),
 					sound('moth-boss-screech2.wav',0.7),
                  	lib.audio.play_music(me,'Frogatto_Moth_Boss_Battle.ogg'),
-                 spawn('moth_boss',680,-930,{_x_bound: -500, _x2_bound:1800, _y_bound:-750, _y2_bound:-500})]",
+					spawn('moth_boss',680,-930,{
+						flight_bounds: {x: -500, x2: 1800, y: -750, y2: -500},
+						scene_bounds: {x: 200, x2: 1700, y: -1036, y2: -400},
+					})
+                 ]",
 			"type": "target",
 			"x": 832,
 			"y": -448
