--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -51,12 +51,10 @@ properties: {
 	
 	#-------------------------- general functions --------------------------#
 	setup: "[
-		[
+		
 			if(lower_difficulty, set(max_hitpoints, 2400)),
-			add_object(wind_stream_particles),
-		]
-		;
-		setup_particles
+			setup_wind_gust_obj,
+		
 	]",	
 	
 	try_facing: "def(int direction) -> commands if(direction != facing,fire_event('turn'))",
@@ -82,12 +80,12 @@ properties: {
 									]
 					))))])",
 
-	choose_first_target_pos: "[ set(_target_x, (_x2_bound - _x_bound)/2), set(_target_y, _y2_bound)]",
+	choose_first_target_pos: "[ set(_target_x, (flight_bounds.x2 - flight_bounds.x)/2), set(_target_y, flight_bounds.y2)]",
 
-	choose_target_pos: "[	set(_target_x, min(_x_bound,_x2_bound) + 1d(abs(_x2_bound - _x_bound))),
+	choose_target_pos: "[	set(_target_x, min(flight_bounds.x, flight_bounds.x2) + 1d(abs(flight_bounds.x2 - flight_bounds.x))),
 							if(should_do_high_pass,
-								set(_target_y, min(_y_bound,_y2_bound) + 1d(abs(_y2_bound - _y_bound)/2) ),
-								set(_target_y, min(_y_bound,_y2_bound) + 1d(abs(_y2_bound - _y_bound)/2) + abs(_y2_bound - _y_bound)/2 ),
+								set(_target_y, min(flight_bounds.y, flight_bounds.y2) + 1d(abs(flight_bounds.y2 - flight_bounds.y)/2) ),
+								set(_target_y, min(flight_bounds.y, flight_bounds.y2) + 1d(abs(flight_bounds.y2 - flight_bounds.y)/2) + abs(flight_bounds.y2 - flight_bounds.y)/2 ),
 							),
 							_flight_height_prng.iterate_random_pool
 						] where should_do_high_pass = if(_flight_height_prng.get_next_value = 1, true, false)",
@@ -131,16 +129,16 @@ properties: {
 									
 #---- dive attack ----#
 	choose_dive_target_pos: "[set(_target_x, level.player.mid_x), set(_target_y, level.player.mid_y)]",
-	choose_dive_recovery_pos: "[set(_target_x, if(velocity_x < 0, _x_bound, _x2_bound)), set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)]",
+	choose_dive_recovery_pos: "[set(_target_x, if(velocity_x < 0, flight_bounds.x, flight_bounds.x2)), set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2)]",
 	
 #---- wind gust ----#
 	choose_windgust_target_pos: "if(1d2=2,
 		[
-			set(_target_x, _x_bound), 
-			set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)
+			set(_target_x, flight_bounds.x), 
+			set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2)
 		],[
-			set(_target_x, _x2_bound), 
-			set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)
+			set(_target_x, flight_bounds.x2), 
+			set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2)
 		]
 	)",
 
@@ -149,12 +147,12 @@ properties: {
 				spawn('current_generator',midpoint_x,midpoint_y, {
 					facing:1,
 					invisible:true,
-					_x_bound:_x_bound-96,
-					_x2_bound:_x2_bound+96,
-					_y_bound:_y_bound-96,
-					_y2_bound:_y2_bound+512,
+					_x_bound: scene_bounds.x,
+					_x2_bound: scene_bounds.x2,
+					_y_bound: scene_bounds.y,
+					_y2_bound: scene_bounds.y2,
 					strength:10000,
-					current_vel_x: if(mid_x > _x_bound + (_x2_bound - _x_bound)/2, -800, 800),
+					current_vel_x: if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800),
 					current_vel_y:0,
 					always_active:true
 				},[
@@ -174,55 +172,26 @@ properties: {
 					)
 				)
 			 ]	where number_of_wind_gust_anims = timeout/3,
-			 	where gust_mid_x = (_x_bound+_x2_bound)/2,
-			 	where gust_mid_y = (_y_bound+_y2_bound + 512-96)/2,
-			 	where gust_width = (_x2_bound-_x_bound) + 96*2,
-			 	where gust_height = ((_y2_bound-_y_bound) + 96*2 + 512 )/2,
+			 	where gust_mid_x = (scene_bounds.x + scene_bounds.x2)/2,
+			 	where gust_mid_y = (scene_bounds.y + scene_bounds.y2 + 512-96)/2,
+			 	where gust_width = (scene_bounds.x2 - scene_bounds.x) + 96*2,
+			 	where gust_height = ((scene_bounds.y2 - scene_bounds.y) + 96*2 + 512 )/2,
 			 	where gust_direction = wind_gust_direction
 			 ",
-	wind_gust_direction: "int :: if(mid_x > _x_bound + (_x2_bound - _x_bound)/2, 1, -1)",
+	wind_gust_direction: "int :: if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, 1, -1)",
 
 
+	setup_wind_gust_obj: "[
+		set(_gust_fx_anchor, wind_obj)
+		;
+		add_object(_gust_fx_anchor)
+	]	where wind_obj = object('moth_boss.gust_fx_anchor', scene_bounds.x, scene_bounds.y, {
+		_x_bound: scene_bounds.x,
+		_x2_bound: scene_bounds.x2,
+		_y_bound: scene_bounds.y,
+		_y2_bound: scene_bounds.y2,
+	})",
 
-	wind_stream_particles: { 
-		type: "obj particle_attache", 
-		init: "object('particle_attache', x,y, {
-			_particle_type:'wind_stream', //Silence check for this existing. `particles`, which this sets, is overwritten later.
-			parent: me,
-			time_to_die: 0,
-			x:x, y:y,
-			zorder: lib.zorder.get('liquid_particle_effects'),
-		})",
-		persistent: false,
-	},
-
-	setup_particles: "commands :: [
-		set(wind_stream_particles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-		set(wind_stream_particles.particles, (
-			raw_particle_system_info + {
-				position: [
-					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-					_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
-					0
-				],
-				fast_forward: (map <- raw_particle_system_info.fast_forward) + {
-					time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
-				},
-				emitter: (map <- raw_particle_system_info.emitter) + {
-					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
-					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-						max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-					}
-				},
-			} where
-				raw_particle_system_info = 
-					(ParticleSystemInfo <- get_document('data/particles/wind_stream.cfg')).info,
-				bubble_average_lifetime = 
-					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-					where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
-		)),
-	]",
 
 
 
@@ -304,10 +273,10 @@ properties: {
 	_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:4, _pool_size_multiplier: 2})", persistent: false },
 	_flight_height_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:2, _pool_size_multiplier: 2})", persistent: false },
 
-	_x_bound: { type: "int", editor_info: { type: "x", value: "mid_x-200" } },
-	_x2_bound: { type: "int", editor_info: { type: "x", value: "mid_x+200" } },
-	_y_bound: { type: "int", editor_info: { type: "y", value: "mid_y-200" } },
-	_y2_bound: { type: "int", editor_info: { type: "y", value: "mid_y+200" } },
+	flight_bounds: { type: "{ x: int, y: int, x2: int, y2: int }", dynamic_initialization: true },
+	scene_bounds: { type: "{ x: int, y: int, x2: int, y2: int }", dynamic_initialization: true },
+
+	_gust_fx_anchor: { type: "obj moth_boss.gust_fx_anchor", dynamic_initialization: true },
 },
 
 on_create: "[ setup, choose_first_target_pos ]",
@@ -733,5 +702,75 @@ object_type: [
 			reverse: true,
 		},
 	},
+	{
+		id: "gust_fx_anchor",
+		always_active: true,
+		prototype: ["transient_object"],
+		zorder: "@include data/zorder.cfg:forest_leaves_background",
+		on_end_anim: "animation(animation)",
+
+		properties: {
+#-------------------------- constructors --------------------------#
+			transient_obj_constructor: "[
+				add_object(wind_stream_particles),
+				;
+				setup_particles,
+				
+				//debug(_x_bound, _x2_bound, _y_bound, _y2_bound),
+			]",
+
+#-------------------------- variables --------------------------#
+
+			_x_bound: { type: "int", dynamic_initialization: true },
+			_x2_bound: { type: "int", dynamic_initialization: true },
+			_y_bound: { type: "int", dynamic_initialization: true },
+			_y2_bound: { type: "int", dynamic_initialization: true },
+
+
+#-------------------------- fx --------------------------#
+			wind_stream_particles: { 
+				type: "obj particle_attache", 
+				init: "object('particle_attache', x,y, {
+					_particle_type:'wind_stream', //Silence check for this existing. `particles`, which this sets, is overwritten later.
+					parent: me,
+					time_to_die: 0,
+					x:x, y:y,
+					zorder: lib.zorder.get('liquid_particle_effects'),
+				})",
+				persistent: false,
+			},
+
+			setup_particles: "commands :: [
+				set(wind_stream_particles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+				set(wind_stream_particles.particles, (
+					raw_particle_system_info + {
+						position: [
+							(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+							_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+							0
+						],
+						fast_forward: (map <- raw_particle_system_info.fast_forward) + {
+							time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
+						},
+						emitter: (map <- raw_particle_system_info.emitter) + {
+							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+							box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+								max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+							}
+						},
+					} where
+						raw_particle_system_info = 
+							(ParticleSystemInfo <- get_document('data/particles/wind_stream.cfg')).info,
+						bubble_average_lifetime = 
+							(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+							where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
+				)),
+			]",
+
+		},
+
+	},
+	
 ],
 }
