Finally pigwrestled the win particles into covering the screen, as intended.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -92,7 +92,8 @@
 							]),
 							set(me.facing,1),
 							(obj frogatto_playable <- level.player).do_upon_landing( [def() shake_screen(200, 200, 100, 100), def() sound_falloff('frogatto-fall-thump.wav')] ),
-							schedule(200,fire_event(me, 'script1'))]",
+							schedule(200,fire_event(me, 'script1')),
+						]",
 			"on_process": "if(cycle < 60, [add(level.player.velocity_x, sin(level.cycle*2)*15)])",
 			"on_script1": "fire_event(get_object_or_die(level,'script_controller'),'script2')",
 			"type": "berd_npc",
@@ -360,7 +361,7 @@
                  	lib.audio.play_music(me,'Frogatto_Moth_Boss_Battle.ogg'),
 					spawn('moth_boss',680,-930,{
 						flight_bounds: {x: -500, x2: 1800, y: -750, y2: -500},
-						scene_bounds: {x: 200, x2: 1700, y: -1036, y2: -400},
+						scene_bounds: {x: -250, x2: 1700, y: -1536, y2: -40},
 					})
                  ]",
 			"type": "target",
