--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -744,32 +744,42 @@ object_type: [
 				set(wind_stream_particles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
 				set(wind_stream_particles.particles, (
 					raw_particle_system_info + {
-						position: [
+						position: dump([
 							(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-							_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+							(_y_bound + _y2_bound)/2 - mid_y, //
 							0
-						],
+						]),
 						fast_forward: (map <- raw_particle_system_info.fast_forward) + {
 							time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
 						},
 						emitter: (map <- raw_particle_system_info.emitter) + {
 							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+							box_height: _y2_bound - _y_bound, //Make the bubbles as tall as the water. (To position the bubbles, see `position` above.)
 							box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-								max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-							}
+							emission_rate: dump((map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+								min: emission_scale_factor * 0.75, 
+								max: emission_scale_factor
+							})
 						},
 					} where
+					 	emission_scale_factor =
+					 		((_x2_bound - _x_bound) / 1000.0) * 500,
 						raw_particle_system_info = 
 							(ParticleSystemInfo <- get_document('data/particles/wind_stream.cfg')).info,
 						bubble_average_lifetime = 
 							(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-							where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
+							where average_vertical_bubble_speed = 1.0 //totally made-up value.
 				)),
 			]",
 
 		},
-
+		
+		animation: {
+			id: "normal",
+			image: "effects/particles.png",
+			x: 86, y: 73, w: 28, h: 28,
+			duration: -1,
+		},
 	},
 	
 ],
