Set up a way to dynamically adjust the wind particle emission rate.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -709,6 +709,8 @@ object_type: [
 		zorder: "@include data/zorder.cfg:forest_leaves_background",
 		on_end_anim: "animation(animation)",
 
+		timer_frequency: 100,
+		on_timer: "set_emission_rate(0.1)",
 		properties: {
 #-------------------------- constructors --------------------------#
 			transient_obj_constructor: "[
@@ -726,7 +728,11 @@ object_type: [
 			_y_bound: { type: "int", dynamic_initialization: true },
 			_y2_bound: { type: "int", dynamic_initialization: true },
 
-
+			base_emission_rate: { type: "decimal", dynamic_initialization: true },
+			set_emission_rate: "def(decimal rate) -> commands 
+				//set(wind_stream_particles.emission_rate, {min: 0.75 * base_emission_rate * rate, max: base_emission_rate * rate})
+				set(wind_stream_particles.emission_rate, base_emission_rate * rate)
+			",
 #-------------------------- fx --------------------------#
 			wind_stream_particles: { 
 				type: "obj particle_attache", 
@@ -741,7 +747,10 @@ object_type: [
 			},
 
 			setup_particles: "commands :: [
-				set(wind_stream_particles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+//				set(wind_stream_particles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+				
+				set(base_emission_rate, emission_scale_factor),
+				
 				set(wind_stream_particles.particles, (
 					raw_particle_system_info + {
 						position: dump([
@@ -761,16 +770,17 @@ object_type: [
 								max: emission_scale_factor
 							})
 						},
-					} where
-					 	emission_scale_factor =
-					 		((_x2_bound - _x_bound) / 1000.0) * 500,
-						raw_particle_system_info = 
-							(ParticleSystemInfo <- get_document('data/particles/wind_stream.cfg')).info,
-						bubble_average_lifetime = 
-							(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-							where average_vertical_bubble_speed = 1.0 //totally made-up value.
+					}
 				)),
-			]",
+			] where
+				emission_scale_factor =
+					((_x2_bound - _x_bound) / 1000.0) * 500,
+				raw_particle_system_info = 
+					(ParticleSystemInfo <- get_document('data/particles/wind_stream.cfg')).info,
+				bubble_average_lifetime = 
+					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+					where average_vertical_bubble_speed = 1.0 //totally made-up value.
+							",
 
 		},
 		
