Some work towards hooking the moth boss particles into the right spot.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -143,7 +143,9 @@ properties: {
 	)",
 
 	do_wind_gust: "if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast'))",
-	wind_gust: "[ schedule_next_action,
+	wind_gust: "[
+				schedule_next_action,
+				_gust_fx_anchor.set_emission_rate(1.0),
 				spawn('current_generator',midpoint_x,midpoint_y, {
 					facing:1,
 					invisible:true,
@@ -157,7 +159,11 @@ properties: {
 					always_active:true
 				},[
 					sound_falloff('moth-boss-wind1.ogg',500,1.0),
-					schedule(timeout, [stop_sound('moth-boss-wind1.ogg'),die()])
+					schedule(timeout, [
+						stop_sound('moth-boss-wind1.ogg'),
+						die(),
+						_gust_fx_anchor.set_emission_rate(0.0),
+					])
 				]),
 				map(
 					range(number_of_wind_gust_anims),
@@ -758,16 +764,13 @@ object_type: [
 							(_y_bound + _y2_bound)/2 - mid_y, //
 							0
 						]),
-						fast_forward: (map <- raw_particle_system_info.fast_forward) + {
-							time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
-						},
 						emitter: (map <- raw_particle_system_info.emitter) + {
 							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
 							box_height: _y2_bound - _y_bound, //Make the bubbles as tall as the water. (To position the bubbles, see `position` above.)
 							box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
 							emission_rate: dump((map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-								min: emission_scale_factor * 0.75, 
-								max: emission_scale_factor
+								min: 0, //emission_scale_factor * 0.75, 
+								max: 0, //emission_scale_factor
 							})
 						},
 					}
