--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -80,7 +80,7 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "berd",
-			"on_create": "[/*
+			"on_create": "[
 							set(level.player.control_lock, []),
 							set(me.velocity_y, 600),
 							set(me.velocity_x, 500),
@@ -93,7 +93,7 @@
 							set(me.facing,1),
 							(obj frogatto_playable <- level.player).do_upon_landing( [def() shake_screen(200, 200, 100, 100), def() sound_falloff('frogatto-fall-thump.wav')] ),
 							schedule(200,fire_event(me, 'script1')),
-						*/]",
+						]",
 			"on_process": "if(cycle < 60, [add(level.player.velocity_x, sin(level.cycle*2)*15)])",
 			"on_script1": "fire_event(get_object_or_die(level,'script_controller'),'script2')",
 			"type": "berd_npc",
