Update the moth boss to split the wind gust into multiple parts with different wind speeds.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -67,7 +67,7 @@ properties: {
 	enter_mode: "def(string mode, commands command) -> commands [set(_state, mode), command, /*debug(mode+' '+cycle)*/]",
 	change_action: "commands <- if(cycle - _last_changed_action > change_action_cooldown_time, [set(_last_changed_action, cycle),
 					if(_state = 'diving_towards_player', enter_mode('recover_from_dive', choose_dive_recovery_pos),
-						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',wind_gust),
+						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
 							if(_state != 'moving', enter_mode('moving',choose_target_pos),
 								if(should_lay_egg, enter_mode('egg-laying',lay_egg),
 									[switch(_behavior_mode_prng.get_next_value, 
@@ -142,48 +142,86 @@ properties: {
 		]
 	)",
 
-	do_wind_gust: "if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast'))",
-	wind_gust: "[
-				schedule_next_action,
-				_gust_fx_anchor.set_emission_rate(1.0),
-				spawn('current_generator',midpoint_x,midpoint_y, {
-					facing:1,
-					invisible:true,
-					_x_bound: scene_bounds.x,
-					_x2_bound: scene_bounds.x2,
-					_y_bound: scene_bounds.y,
-					_y2_bound: scene_bounds.y2,
-					strength:10000,
-					current_vel_x: if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800),
-					current_vel_y:0,
-					always_active:true
-				},[
-					sound_falloff('moth-boss-wind1.ogg',500,1.0),
-					schedule(timeout, [
-						stop_sound('moth-boss-wind1.ogg'),
-						die(),
-						_gust_fx_anchor.set_emission_rate(0.0),
-					])
-				]),
-				map(
-					range(number_of_wind_gust_anims),
-					schedule(value*3, 
-						spawn('wind_gust',
-							gust_mid_x-gust_width/2+1d(gust_width),
-							gust_mid_y-gust_height/2+1d(gust_height),
-						{
-							facing:gust_direction,
-							upside_down: if(1d2=2,-1,1), animation:'normal'+(1d3-1)
-						})
-					)
-				)
-			 ]	where number_of_wind_gust_anims = timeout/3,
-			 	where gust_mid_x = (scene_bounds.x + scene_bounds.x2)/2,
-			 	where gust_mid_y = (scene_bounds.y + scene_bounds.y2 + 512-96)/2,
-			 	where gust_width = (scene_bounds.x2 - scene_bounds.x) + 96*2,
-			 	where gust_height = ((scene_bounds.y2 - scene_bounds.y) + 96*2 + 512 )/2,
-			 	where gust_direction = wind_gust_direction
-			 ",
+	do_wind_gust_body_behavior: "if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast'))",
+
+	wind_gust_lead_in_time: "decimal :: 150",
+	wind_gust_core_time: "decimal :: 500",
+
+	wind_gust_current_obj: { type: "obj current_generator", init: "object('current_generator', mid_x, mid_y, {
+		facing:1,
+		invisible:true,
+		strength: 500,
+		current_vel_y:0,
+		always_active:true
+	})" },
+
+	setup_current_generator_object: "[
+		set(cob._x_bound, scene_bounds.x),
+		set(cob._x2_bound, scene_bounds.x2),
+		set(cob._y_bound, scene_bounds.y),
+		set(cob._y2_bound, scene_bounds.y2),
+		set(cob.current_vel_x,
+			if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800)
+		),
+	] where cob = wind_gust_current_obj",
+	
+
+	do_wind_gust_level_behavior: "[
+		setup_current_generator_object,
+		add_object(wind_gust_current_obj),
+		sound_falloff('moth-boss-wind1.ogg',500,1.0),
+
+		set(wind_gust_current_obj.strength, 500),
+		_gust_fx_anchor.set_emission_rate(0.75),
+		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_core),
+	]",
+	
+	do_wind_gust_level_behavior_core: "[
+		set(wind_gust_current_obj.strength, 1000),
+		spawn_wind_puffs,
+		_gust_fx_anchor.set_emission_rate(1.0),
+		schedule(wind_gust_core_time, do_wind_gust_level_behavior_leadout),
+	]",
+	
+	do_wind_gust_level_behavior: "[
+		set(wind_gust_current_obj.strength, 500),
+		_gust_fx_anchor.set_emission_rate(0.75),
+		
+		schedule(wind_gust_lead_in_time, bind_command(def() change_action) ),
+		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_cleanup ),
+	]",	
+
+	do_wind_gust_level_behavior_cleanup: "[
+		remove_object(wind_gust_current_obj),
+		_gust_fx_anchor.set_emission_rate(0.0),
+
+		stop_sound('moth-boss-wind1.ogg'),
+		
+	]",
+
+	
+
+	spawn_wind_puffs: "[
+		map(
+			range(number_of_wind_gust_anims),
+			schedule(value*3, 
+				spawn('wind_gust',
+					gust_mid_x-gust_width/2+1d(gust_width),
+					gust_mid_y-gust_height/2+1d(gust_height),
+				{
+					facing:gust_direction,
+					upside_down: if(1d2=2,-1,1), animation:'normal'+(1d3-1)
+				})
+			)
+		)
+	 ]	where number_of_wind_gust_anims = wind_gust_core_time/3,
+		where gust_mid_x = (scene_bounds.x + scene_bounds.x2)/2,
+		where gust_mid_y = (scene_bounds.y + scene_bounds.y2 + 512-96)/2,
+		where gust_width = (scene_bounds.x2 - scene_bounds.x) + 96*2,
+		where gust_height = ((scene_bounds.y2 - scene_bounds.y) + 96*2 + 512 )/2,
+		where gust_direction = wind_gust_direction
+	 ",
+
 	wind_gust_direction: "int :: if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, 1, -1)",
 
 
@@ -302,7 +340,7 @@ on_process: "[
 			'moving',						seek_position,
 			'egg-laying',					null,
 			'moving_to_prep_windgust',		seek_position,
-			'windgust',						do_wind_gust,
+			'windgust',						do_wind_gust_body_behavior,
 			'diving_towards_player',		seek_position,
 			'recover_from_dive',			seek_position,
 			null
@@ -715,8 +753,6 @@ object_type: [
 		zorder: "@include data/zorder.cfg:forest_leaves_background",
 		on_end_anim: "animation(animation)",
 
-		timer_frequency: 100,
-		on_timer: "set_emission_rate(0.1)",
 		properties: {
 #-------------------------- constructors --------------------------#
 			transient_obj_constructor: "[
