Fixed a few typos and syntax errors.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -144,8 +144,8 @@ properties: {
 
 	do_wind_gust_body_behavior: "if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast'))",
 
-	wind_gust_lead_in_time: "decimal :: 150",
-	wind_gust_core_time: "decimal :: 500",
+	wind_gust_lead_in_time: "int :: 150",
+	wind_gust_core_time: "int :: 500",
 
 	wind_gust_current_obj: { type: "obj current_generator", init: "object('current_generator', mid_x, mid_y, {
 		facing:1,
@@ -155,7 +155,7 @@ properties: {
 		always_active:true
 	})" },
 
-	setup_current_generator_object: "[
+	setup_current_generator_object: "commands :: [
 		set(cob._x_bound, scene_bounds.x),
 		set(cob._x2_bound, scene_bounds.x2),
 		set(cob._y_bound, scene_bounds.y),
@@ -166,7 +166,7 @@ properties: {
 	] where cob = wind_gust_current_obj",
 	
 
-	do_wind_gust_level_behavior: "[
+	do_wind_gust_level_behavior: "commands :: [
 		setup_current_generator_object,
 		add_object(wind_gust_current_obj),
 		sound_falloff('moth-boss-wind1.ogg',500,1.0),
@@ -176,14 +176,14 @@ properties: {
 		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_core),
 	]",
 	
-	do_wind_gust_level_behavior_core: "[
+	do_wind_gust_level_behavior_core: "commands :: [
 		set(wind_gust_current_obj.strength, 1000),
 		spawn_wind_puffs,
 		_gust_fx_anchor.set_emission_rate(1.0),
 		schedule(wind_gust_core_time, do_wind_gust_level_behavior_leadout),
 	]",
 	
-	do_wind_gust_level_behavior: "[
+	do_wind_gust_level_behavior_leadout: "commands :: [
 		set(wind_gust_current_obj.strength, 500),
 		_gust_fx_anchor.set_emission_rate(0.75),
 		
@@ -191,7 +191,7 @@ properties: {
 		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_cleanup ),
 	]",	
 
-	do_wind_gust_level_behavior_cleanup: "[
+	do_wind_gust_level_behavior_cleanup: "commands :: [
 		remove_object(wind_gust_current_obj),
 		_gust_fx_anchor.set_emission_rate(0.0),
 
