Mostly half-assed a working version of the rock attack.

--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -3,6 +3,8 @@ id: "rock_flying_harmful",
 prototype: ["shot"],
 dies_on_inactive: true,
 zorder: "@include data/zorder.cfg:near_player_foreground_effects",
+activation_border: 1000,	
+
 properties: {
 	dies_upon_dealing_damage: false,
 	team: "'enemy'",
@@ -11,7 +13,6 @@ properties: {
 	damage_type: "enum impact",
 	goes_through_enemy_shots: true,
 	damage_cooldown: "60",
-	
 
 
 
