--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -70,7 +70,7 @@ properties: {
 						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
 							if(_state != 'moving', enter_mode('moving',choose_target_pos),
 								if(should_lay_egg, enter_mode('egg-laying',lay_egg),
-									[switch(_behavior_mode_prng.get_next_value, 
+									[switch(2, //_behavior_mode_prng.get_next_value, 
 										0, enter_mode('shooting',prepare_shot),
 										1, enter_mode('shooting_homingshot',prepare_homing_shot),
 										2, enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
@@ -172,20 +172,22 @@ properties: {
 		sound_falloff('moth-boss-wind1.ogg',500,1.0),
 
 		set(wind_gust_current_obj.strength, 500),
-		_gust_fx_anchor.set_emission_rate(0.75),
+		_gust_fx_anchor.set_emission_rate(0.35),
 		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_core),
 	]",
 	
 	do_wind_gust_level_behavior_core: "commands :: [
-		set(wind_gust_current_obj.strength, 1000),
 		spawn_wind_puffs,
+		spawn_rock_projectiles,
+		
+		set(wind_gust_current_obj.strength, 1000),
 		_gust_fx_anchor.set_emission_rate(1.0),
 		schedule(wind_gust_core_time, do_wind_gust_level_behavior_leadout),
 	]",
 	
 	do_wind_gust_level_behavior_leadout: "commands :: [
 		set(wind_gust_current_obj.strength, 500),
-		_gust_fx_anchor.set_emission_rate(0.75),
+		_gust_fx_anchor.set_emission_rate(0.35),
 		
 		schedule(wind_gust_lead_in_time, bind_command(def() change_action) ),
 		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_cleanup ),
@@ -200,6 +202,29 @@ properties: {
 	]",
 
 	
+	spawn_rock_projectiles: "[
+		map(
+			range(number_of_rock_waves),
+			schedule(value*100 - 100, [ 
+				spawn('rock_flying_harmful',
+					rock_mid_x,
+					rock_mid_y - (64 * (1d3-1)),
+				{
+					facing: rock_direction,
+					upside_down: if(1d2=2,-1,1),
+					velocity_x: 850 * rock_direction,
+				}),
+				debug('spawning at'),
+				debug(rock_mid_x), debug(rock_mid_y),
+			])
+		)
+	 ]	where number_of_rock_waves = wind_gust_core_time/100,
+		where rock_mid_x = if(rock_direction > 0, scene_bounds.x, scene_bounds.x2),
+		where rock_mid_y = (flight_bounds.y2 + 164),
+
+		where rock_direction = -wind_gust_direction
+	 ",
+
 
 	spawn_wind_puffs: "[
 		map(
