Set up a better sprite and a decent animation for the flying rock chunks.

--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -24,6 +24,8 @@ properties: {
 
 },
 
+on_process: "add(rotate, 1d3 * facing)",
+
 
 on_end_anim: "animation('normal')",
 animation: [
@@ -32,8 +34,9 @@ animation: [
 		image: "effects/rock-chunk.png",
 		id: "normal",
 		rect: [0,0,31,31],
-		frames: 1,
-		duration: 2,
+		frames: 6,
+		duration: 6,
+		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
 	},
 ],
 }
