Added a way for the moth boss's wind to correctly flip its particles to match the wind's direction.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -172,6 +172,7 @@ properties: {
 		sound_falloff('moth-boss-wind1.ogg',500,1.0),
 
 		set(wind_gust_current_obj.strength, 500),
+		_gust_fx_anchor.set_wind_direction(-wind_gust_direction),
 		_gust_fx_anchor.set_emission_rate(0.35),
 		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_core),
 	]",
@@ -800,6 +801,14 @@ object_type: [
 				//set(wind_stream_particles.emission_rate, {min: 0.75 * base_emission_rate * rate, max: base_emission_rate * rate})
 				set(wind_stream_particles.emission_rate, base_emission_rate * rate)
 			",
+			
+			wind_direction_horizontal: { type: "decimal", init: "-1.0" },
+			set_wind_direction: "def(decimal wind_direction) -> commands  [
+				set(wind_direction_horizontal, wind_direction)
+				;
+				setup_particles
+			]",
+			
 #-------------------------- fx --------------------------#
 			wind_stream_particles: { 
 				type: "obj particle_attache", 
@@ -834,6 +843,12 @@ object_type: [
 								max: 0, //emission_scale_factor
 							})
 						},
+						affector: map((list <- raw_particle_system_info.affector),
+							if((map <- value).type = 'linear_force',
+								(map <- value) + {direction: [wind_direction_horizontal,0.0,0.0]},
+								value
+							)
+						)
 					}
 				)),
 			] where
