Even more edits to the moth boss level; removing the 'spur' at the middle the player can hide behind.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -207,8 +207,8 @@
 			"face_right": false,
 			"label": "_2600daa",
 			"type": "forest_branch_light2",
-			"x": 739,
-			"y": -836
+			"x": 747,
+			"y": -866
 		},
 		{
 			"_uuid": "ae23f6462397462399aaea50112ea3a0",
@@ -290,8 +290,8 @@
 			"custom": true,
 			"label": "_7839971a",
 			"type": "rock_foreground_forest3",
-			"x": 524,
-			"y": -278
+			"x": 525,
+			"y": -299
 		},
 		{
 			"_uuid": "9f103465b7fa4f758982e58ee168937c",
@@ -389,8 +389,8 @@
 			"custom": true,
 			"label": "_5373",
 			"type": "forest_branch_light3",
-			"x": 812,
-			"y": -631
+			"x": 809,
+			"y": -641
 		},
 		{
 			"_uuid": "6779e40f4bf84f2dacbcc7f0541b3694",
@@ -398,8 +398,8 @@
 			"custom": true,
 			"label": "_550a",
 			"type": "forest_branch_light4",
-			"x": 387,
-			"y": -719
+			"x": 396,
+			"y": -751
 		},
 		{
 			"_uuid": "dec55427791041e28656291c69f8361e",
@@ -407,8 +407,8 @@
 			"custom": true,
 			"label": "_6407",
 			"type": "forest_branch_light1",
-			"x": 856,
-			"y": -765
+			"x": 819,
+			"y": -789
 		},
 		{
 			"_uuid": "2836ca17258e4241a047d6222718cc06",
@@ -425,8 +425,8 @@
 			"custom": true,
 			"label": "_50d3",
 			"type": "forest_foliage_tuft4",
-			"x": 480,
-			"y": -608
+			"x": 708,
+			"y": -544
 		},
 		{
 			"_uuid": "4b6c0275e0ad4510a97510c4ba65524c",
@@ -434,8 +434,17 @@
 			"custom": true,
 			"label": "_856",
 			"type": "forest_foliage_tuft3",
-			"x": 783,
-			"y": -769
+			"x": 607,
+			"y": -708
+		},
+		{
+			"_uuid": "1001aefdd6a64804b04252b78b343ebe",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_37c6d18b",
+			"type": "forest_house_walkway_angled3",
+			"x": 609,
+			"y": -474
 		}
 	],
 	"dimensions": [-128,-1408,1599,-33],
@@ -481,17 +490,17 @@
 ,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs
-,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs
 ,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs
 ,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,,lfs
-,
+,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs
 ,,,,,,,,,,,,,,,,,,,,,,lfs,lfs
-,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,,lfs,lfs
-,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs
-,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs
-,,,,,,,,,,,,,,,,,lfs,lfs,lfs
-,,,,,,,,,,,,,,,,,lfs,lfs
+,,,,,,,,,,,,,,,,,,,,,lfs,lfs
+,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs
+,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs
+,,,,,,,,,,,,,,,,lfs,lfs,lfs
+,,,,,,,,,,,,,,,,lfs,lfs
 ,
 ,
 ,
@@ -550,13 +559,43 @@
 			"zorder": "background_parallax_forest_leaves"
 		},
 		{
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": ",nbr",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": -352,
+			"y_speed": 100,
+			"zorder": "exterior_background_tiles"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
 			"tiles": ",
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
-,,,,,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg
-,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,
+,
+,,,,,frg,frg,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,frg
+,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -605,25 +644,26 @@
 			"zorder": "exterior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,,,,,,,,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,tnk,tnk,,,,,,,,tnk
+,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk
 ,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
+,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk,,,,,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk,,,,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk
 ,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,
-,
-,
+,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk
 ,
 ,
 ,
@@ -668,17 +708,29 @@
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": -864,
+			"y": -896,
 			"y_speed": 100,
 			"zorder": "forest_tree_trunks"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,fbr
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": ",fbr",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": 0,
+			"y": -416,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
 		},
@@ -703,14 +755,14 @@
 ,,,,,,,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,,,lfm,lfm,,,,lfm,lfm,lfm,lfm,lfm,,lfm,lfm,lfm,lfm,lfm
 ,,,,,,,,lfm,lfm,,,lfm,lfm,lfm,,,lfm,lfm,lfm,lfm,,lfm,,,lfm,lfm,,lfm,lfm,lfm,lfm
 ,,,,,,,,lfm,lfm,,,lfm,lfm,lfm,,,lfm,lfm,lfm,,,lfm,,,lfm,lfm,,lfm,lfm,lfm,lfm,lfm
-,,,,,,,,lfm,,,,,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,,lfm,,,lfm,,lfm,lfm,lfm,lfm
-,,,,,,,,,,,,,lfm,,lfm,lfm,,,lfm,lfm,lfm,,lfm,lfm,,,,lfm
+,,,,,,,,lfm,,,,,lfm,lfm,lfm,lfm,lfm,lfm,,,,,lfm,,,lfm,,lfm,lfm,lfm,lfm
+,,,,,,,,,,,,,lfm,,lfm,lfm,,,,,,,lfm,lfm,,,,lfm
 ,,,,,,,,,,,,,lfm,,lfm,lfm,lfm,,,,,,lfm,lfm
-,,,,,,,,,,,,,,,,,,,,,,lfm,lfm
-,
-,,,,,,,,,,,,,,,,lfm,lfm,lfm,lfm,,,lfm
-,,,,,,,,,,,,,,,,lfm,lfm,lfm,lfm,lfm
-,,,,,,,,,,,,,,,,,,lfm
+,,,,,,,,,,,,,,,,lfm,lfm,lfm,,,,lfm,lfm
+,,,,,,,,,,,,,,,,lfm,lfm,lfm
+,,,,,,,,,,,,,,,,,,,lfm,,,lfm
+,,,,,,,,,,,,,,,,lfm,lfm,lfm
+,,,,,,,,,,,,,,,,,lfm
 ,
 ,
 ,
@@ -789,6 +841,16 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
 			"zorder": "npcs"
 		},
 		{
@@ -819,13 +881,13 @@
 ,,,,,,,,,,,,,,,lef,lef,,,,lef,lef,lef,,lef,lef,lef,,lef,lef,lef
 ,,,,,,,,,,,,,,,lef,lef,,,,lef,lef,,,,lef,lef,,lef,lef,lef,lef,lef
 ,,,,,,,,,,,,,,,,lef,lef,,lef,,,lef,lef,,lef,,,lef,lef,lef,lef
-,,,,,,,,,,,,,,,,,,lef,lef,lef,lef,lef,lef,lef,,,,lef
-,,,,,,,,,,,,,,,,,,,lef,lef,,lef
+,,,,,,,,,,,,,,,,,,lef,,,,lef,lef,lef,,,,lef
+,,,,,,,,,,,,,,,,,lef,,,,,lef
+,,,,,,,,,,,,,,,,,lef,lef
+,,,,,,,,,,,,,,,,,lef
 ,
-,
-,
-,,,,,,,,,,,,,,,,,lef,lef,lef
-,
+,,,,,,,,,,,,,,,,,,,lef
+,,,,,,,,,,,,,,,,,lef,lef
 ,
 ,
 ,
@@ -888,7 +950,24 @@
 			"zorder": "forest_leaves_foreground"
 		},
 		{
-			"tiles": ",,,,,,,,,,fug,fug,fug,,,,,,,,,,,,,,,,,,,,fug,fug,fug
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,fug,fug,fug,,,,,,,,,,,,,,,,,,,,fug,fug,fug
 ,
 ,
 ,
@@ -901,7 +980,7 @@
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": -288,
+			"y": -832,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
 		},
