Hopefully tweaked the sword kitty boss so that the blade-stuck-in-wall attack is considerably more reliable about actually embedding the sword in the wall, and not giving the player a bad surprise by instead instantly becoming hostile.

--- a/data/objects/enemies/milgramen/kitty_sword.cfg
+++ b/data/objects/enemies/milgramen/kitty_sword.cfg
@@ -69,6 +69,7 @@ properties: {
 	_spin_counter: { type: "int", default: 3, persistent: false },
 	_stuck_count: { type: "int", default: 0, persistent: false },
 	_last_played_spin_sound: { type: "int", default: 0, persistent: false },
+	_last_started_lunge_attack: { type: "int", default: 0, persistent: false }, 
 },
 
 on_create: "[set_max_hitpoints({casual: 200 * 4, challenging: 200 * 7})]",
@@ -139,12 +140,13 @@ on_end_prepare_lunge_anim: "if(cycle - _began_energizing > energize_duration,
 								[
 									animation('lunge'),
 									sound('weapon-swing-medium'+1d7+'.wav'),
+									set(_last_started_lunge_attack, level.cycle),
 								],
 								animation('prepare_lunge')
 							)",
 on_end_lunge_stuck_anim: "if(_stuck_count > 4, animation('lunge_unstuck'), [animation('lunge_stuck'), add(_stuck_count, 1)])",
 on_end_lunge_unstuck_anim: "animation('stand')",
-on_process_lunge_attack: "if(is_past_player and (not is_near_player),
+on_process_lunge_attack: "if( level.cycle > _last_started_lunge_attack + 200,  /*is_past_player and (not is_near_player),*/
 								animation('walk'),
                      			animation('lunge_attack')
                      		)",
